# pics2vid

./: LICENSE  README.md  pyproject.toml
examples/: sat_imagery.py
src/pics2vid/: __init__.py  pics2vid.py
